--- a/index.html
+++ b/index.html
@@ -4,51 +4,50 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
-        <h1>Jekyll Template for Project Websites</h1>
-        <p>Simple and modern design for publishing blog posts, documentation and many more things about your project.
-          You can now clone and start to create a website for your project like this one.</p>
-        <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | prepend: site.baseurl }}" role="button">Learn more</a></p>
+        <h1>Parallel Forecast</h1>
+        <p>Building Forecasting Infrastructure to predict the future of AI.</p>
+        <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | prepend: site.baseurl }}" role="button">Learn
+                more</a></p>
     </div>
 </div>
 
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <h2 class="header-light regular-pad">What is Jekyll?</h2>
-              <p class="lead">Jekyll is a simple, blog-aware, static site generator. It takes a template
-              directory containing raw text files in various formats, runs it through
-              a converter (like <a href="https://daringfireball.net/projects/markdown/">Markdown</a>)
-              and our <a href="https://github.com/Shopify/liquid/wiki">Liquid</a> renderer, and
-              spits out a complete, ready-to-publish static website suitable
-              for serving with your favorite web server. Jekyll also happens to be the engine
-              behind <a href="https://pages.github.com">GitHub Pages</a>, which means you can use Jekyll
-              to host your project’s page, blog, or website from GitHub’s servers <strong>for
-              free</strong>.</p>
+            <h2 class="header-light regular-pad">Forecasting the future of AI</h2>
+            <p class="lead">The field of AI is too large to be modeled by a few experts. To create the best forecasts,
+                we need to create systems and structures for internet scale collaboration.</p>
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <h3 class="text-center">Expert Forecasters</h3>
+                    <p>Top forecasters can outperform domain experts in predicting events in their fields. We're
+                        creating a community of expert forecasters to support analysis and decision making in the field
+                        of AI development.
+                    </p>
+                </div>
+                <div class="col-sm-6">
+                    <h3 class="text-center">Prediction Markets</h3>
+                    <p>By setting up prediction markets on relevant questions, we intend to leverage correct incentives
+                        to generate accurate forecasts. </p>
+                </div>
+            </div>
         </div>
         <div class="col-md-6 text-center">
-            <img src="img/jekyll-dark.png" alt="" class="img-responsive">
+            <img src="img/graph-timeline.png" alt="" class="img-responsive">
         </div>
     </div>
     <hr>
-    <div class="row">
-        <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-pencil" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Easy to install and publish</h3>
-            <p>Get started by cloning source into GitHub account of your project. Thanks to <a href="https://pages.github.com">GitHub Pages</a>,
-              it will be automatically compiled and published under your account's (or organisation's) subdomain under <code>github.io</code>.
-            </p>
-        </div>
-        <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Modular Styling and Templating</h3>
-            <p>This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
-            You can change the theme or write your custom one by overwriting bootstrap sass variables for a different color set, font options, etc.</p>
-        </div>
-        <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-code-fork" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Git-based source control</h3>
-            <p>Leverage from Git version control system by
-              maintaining your documentation along with the source code; publish the page when you merge to the master branch.</p>
+    <div>
+        <div class="col-md-12">
+            <p class ="lead">Reach out at to us hello@parallelforecast.com </p>
+
+            <p>We’d especially like to hear from you if:</p>
+
+            <li>You work in a role relying on good forecasts of AI (e.g. policy researcher, grantmaker, safety
+                researcher)</li>
+            <li>You have an excellent forecasting track-record (supported by e.g. a PredictionBook or Metaculus profile)
+            </li>
         </div>
     </div>
 </div>
