--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="header-container jumbotron">
     <div class="container">
         <h1>Parallel Forecast</h1>
-        <p>Building Forecasting Infrastructure to predict the future of AI.</p>
+        <p>Building forecasting infrastructure to predict the future of AI.</p>
         <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | prepend: site.baseurl }}" role="button">Learn
                 more</a></p>
     </div>
@@ -18,36 +18,35 @@ layout: default
             <p class="lead">The field of AI is too large to be modeled by a few experts. To create the best forecasts,
                 we need to create systems and structures for internet scale collaboration.</p>
 
-            <div class="row">
-                <div class="col-sm-6">
-                    <h3 class="text-center">Expert Forecasters</h3>
-                    <p>Top forecasters can outperform domain experts in predicting events in their fields. We're
-                        creating a community of expert forecasters to support analysis and decision making in the field
-                        of AI development.
-                    </p>
-                </div>
-                <div class="col-sm-6">
-                    <h3 class="text-center">Prediction Markets</h3>
-                    <p>By setting up prediction markets on relevant questions, we intend to leverage correct incentives
-                        to generate accurate forecasts. </p>
-                </div>
-            </div>
         </div>
         <div class="col-md-6 text-center">
             <img src="img/graph-timeline.png" alt="" class="img-responsive">
         </div>
     </div>
     <hr>
+    <div class="row">
+        <div class="col-sm-6">
+            <h3 class="text-center">Expert Forecasters</h3>
+            <p>Top forecasters can outperform domain experts in predicting events in their fields. We're
+                creating a community of expert forecasters to support analysis and decision making in the field
+                of AI development.
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <h3 class="text-center">Prediction Markets</h3>
+            <p>Markets are the best mechanism for eliciting accurate predictions about future events. 
+                We want to leverage this social technology by creating novel markets on science and technology events.</p>
+        </div>
+    </div>
+    <hr>
     <div>
-        <div class="col-md-12">
-            <p class ="lead">Reach out at to us hello@parallelforecast.com </p>
+        <div class="col-md-12 text-center">
+            <p class ="lead">Contact us at hello@parallelforecast.com </p>
 
             <p>We’d especially like to hear from you if:</p>
 
-            <li>You work in a role relying on good forecasts of AI (e.g. policy researcher, grantmaker, safety
-                researcher)</li>
-            <li>You have an excellent forecasting track-record (supported by e.g. a PredictionBook or Metaculus profile)
-            </li>
+            <li>You work in a role relying on good forecasts of AI.</li>
+            <li>You have an excellent forecasting track-record.</li>
         </div>
     </div>
 </div>
