added remaining content docs

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
     <hr>
     <div>
         <div class="col-md-12 text-center">
-            <p class ="lead">Contact us at hello@parallelforecast.com </p>
+            <p class ="lead">Contact us at <a href="mailto:hello@parallelforecast.com">hello@parallelforecast.com</a></p>
 
             <p>We’d especially like to hear from you if:</p>
 
