initial improvement of copy

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
     <div class="row">
         <div class="col-md-6">
             <h2 class="header-light regular-pad">Forecasting the future of AI</h2>
-            <p class="lead">The field of AI is too large to be modeled by a few experts. To create the best forecasts,
+            <p class="lead">The field of AI is too complex to be accurately forecast by a few experts. To create useful predictions,
                 we need to create systems and structures for internet scale collaboration.</p>
 
         </div>
